--- a/index.html
+++ b/index.html
@@ -5,45 +5,76 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="stylesheet.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
     <title>Main Eventer</title>
 </head>
 
 <body>
 
     <section id="3_Our_Team">
-        <div class="container"></div>
-        <ul id="team">
-            <li><a href="">Item 1</a></li>
-            <li><a href="">Item 2</a></li>
-            <li><a href="">Item 3</a></li>
-            <li><a href="">Item 4</a></li>
-        </ul>
+
+        <div class="title__container">
+            <h2>Our Team</h2>
         </div>
+
+        <div class="teamMembers__container">
+
+            <figure>
+                <div class="figure__container">
+                    <a href="#" target="_blank"><img class="small__img" src="img/CEO.jpg" alt="The CEO"></a>
+                    <div class="figure__container--content">
+                        <figcaption>CEO</figcaption>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit et labore at voluptatem
+                            perspiciatis
+                            repellat recusandae perferendis delectus.
+                        </p>
+                    </div>
+                </div>
+            </figure>
+
+            <figure>
+                <div class="figure__container">
+                    <a href="#" target="_blank"><img class="small__img" src="img/COO.jpg" alt="The COO"></a>
+                    <div class="figure__container--content">
+                        <figcaption>COO</figcaption>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit et labore at voluptatem
+                            perspiciatis
+                            repellat recusandae perferendis delectus.
+                        </p>
+                    </div>
+                </div>
+            </figure>
+
+            <figure>
+                <div class="figure__container">
+                    <a href="#" target="_blank"><img class="small__img" src="img/CFO.jpg" alt="The CFO"></a>
+                    <div class="figure__container--content">
+                        <figcaption>CFO</figcaption>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit et labore at voluptatem
+                            perspiciatis
+                            repellat recusandae perferendis delectus.
+                        </p>
+                    </div>
+                </div>
+            </figure>
+
+            <figure>
+                <div class="figure__container">
+                    <a href="#" target="_blank"><img class="small__img" src="img/CTO.jpg" alt="The CTO"></a>
+                    <div class="figure__container--content">
+                        <figcaption>CTO</figcaption>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit et labore at voluptatem
+                            perspiciatis
+                            repellat recusandae perferendis delectus.
+                        </p>
+                    </div>
+                </div>
+            </figure>
+
+        </div>
+
     </section>
-
-
-<!--LEGACY CODE-->
-<!-- <div class="container__wrap flex align__center">
-    <div>
-        <h2>La fine équipe</h2>
-    </div>
-    <figure>
-        <a href="https://lorenzodimarco.be/projets/rethinking-ux" target="_blank"><img class="small__img" src="img/lorenzo.png" alt="Lorenzo Di Marco"></a>
-        <figcaption>Lorenzo</figcaption>
-    </figure>
-    <figure>
-        <a href="http://selimamalsagova.be/" target="_blank"><img class="small__img" src="img/selima.png" alt="Selima"></a>
-        <figcaption>Selima</figcaption>
-    </figure>
-    <figure>
-        <a href="https://lucasgeshef.be/projets/rethinking-ux" target="_blank"><img class="small__img" src="img/lucas.png" alt="Lucas Geshef"></a>
-        <figcaption>Lucas</figcaption>
-    </figure> 
-    <figure>
-        <a href="#" target="_blank"><img class="small__img" src="img/daniel.png" alt="Daniel Makram Ghatas"></a>
-        <figcaption>Daniel</figcaption>
-    </figure>
-</div> -->
 
 </body>
 
