--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
 
         
         <div class="nomPrenom">
-          <p>Name *</p>
-          <p class="nomDroite">Lastname *</p>
+        <p class="p">Name *</p>
+        <span class="nomDroite"><p  class="p">Lastname *</p></span>
         </div>
         <div class="nomPrenomFormulaire">
           <input name="nom" placeholder="Name" type="text" required />
@@ -149,11 +149,11 @@
           <input name="nom" placeholder="Lastname" type="text" required />
         </div>
         
-        <p>E-mail *</p>
+        <p class="p">E-mail *</p>
         <input name="email" placeholder="Email" type="email" required /><br />
 
         <div>
-          <p>Description *</p>
+          <p class="p" >Description *</p>
           <textarea
             name="message"
             placeholder="Description"
