header + change figureflex & grey removed

--- a/index.html
+++ b/index.html
@@ -12,6 +12,32 @@
 
 <body>
 
+    <!-----------------------------------------HEADER_NAV----------------------------------------------- -->
+
+    <header>
+        <div class="header--img"></div>
+        <nav class="header__nav--container">
+            <ul>
+                <a>
+                    <li>About</li>
+                </a>
+                <a>
+                    <li>Team</li>
+                </a>
+                <a>
+                    <li>Events</li>
+                </a>
+                <a>
+                    <li>Contact Us</li>
+                </a>
+            </ul>
+        </nav>
+        <div class="header__title--container"> 
+            <h1>Main <span class="header__title--red">Eventer</span></h1>
+            <img href='#' src="/img/logo_cut.png">
+        </div>
+    </header>
+
     <!-- --------------------------------------SECTION_3_OUR_TEAM---------------------------------------------- -->
 
     <section id="3_Our_Team">
@@ -78,7 +104,7 @@
 
     </section>
 
-    <!-- ---------------------SECTION4_OUR_EVENTS -------------------------------------------------->
+    <!-- --------------------------------------SECTION4_OUR_EVENTS -------------------------------------------------->
 
     <section class="ourEvents">
 
