fixed html path

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </nav>
         <div class="header__title--container"> 
             <h1>Main <span class="header__title--red">Eventer</span></h1>
-            <img href='#' src="/img/logo_cut.png">
+            <img href='#' src="img/logo_cut.png">
         </div>
     </header>
 
