--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
 
         <div class="section4__title--container">
             <div class="imageClock">
-                <img src="/img/popImageClock.png">
+                <img src="img/popImageClock.png">
             </div>
 
             <h2 class="section4__title--flexorder"> Our Events </h2>
 
             <div class="imageBeer">
-                <img src="/img/PopimageBeer.png">
+                <img src="img/PopimageBeer.png">
             </div>
         </div>
 
