changed hover to onpage

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </nav>
         <div class="header__title--container"> 
             <h1>Main <span class="header__title--red">Eventer</span></h1>
-            <img href='#' src="img/logo_cut.png">
+            <img href='#' src="/img/logo_cut.png">
         </div>
     </header>
 
@@ -110,13 +110,13 @@
 
         <div class="section4__title--container">
             <div class="imageClock">
-                <img src="img/popImageClock.png">
+                <img src="/img/popImageClock.png">
             </div>
 
             <h2 class="section4__title--flexorder"> Our Events </h2>
 
             <div class="imageBeer">
-                <img src="img/PopimageBeer.png">
+                <img src="/img/PopimageBeer.png">
             </div>
         </div>
 
