--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 
     <header>
         <div class="header--img"></div>
+        <button class="burger">Open the menu</button>
         <nav class="header__nav--container">
-            <ul>
+            <ul class="header__nav__menu--liste">
                 <a>
                     <li>About</li>
                 </a>
@@ -29,185 +30,184 @@
                 </a>
             </ul>
         </nav>
-        <div class="header__title--container"> 
+        <div class="header__title--container">
             <h1>Main <span class="header__title--red">Eventer</span></h1>
             <img href='#' src="/img/logo_cut.png">
         </div>
     </header>
 
     <!-- --------------------------------------SECTION_3_OUR_TEAM---------------------------------------------- -->
+    <section class="main">
+        <section id="3_Our_Team">
 
-    <section id="3_Our_Team">
+            <div class="title__container">
+                <h2>Our Team</h2>
+            </div>
 
-        <div class="title__container">
-            <h2>Our Team</h2>
+            <div class="teamMembers__container">
+
+                <figure>
+                    <div class="figure__container">
+                        <a href="#" target="_blank"><img class="small__img" src="img/CEO.jpg" alt="The CEO"></a>
+                        <div class="figure__container--content">
+                            <figcaption>CEO</figcaption>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit et labore at voluptatem
+                                perspiciatis
+                                repellat recusandae perferendis delectus.
+                            </p>
+                        </div>
+                    </div>
+                </figure>
+
+                <figure>
+                    <div class="figure__container">
+                        <a href="#" target="_blank"><img class="small__img" src="img/COO.jpg" alt="The COO"></a>
+                        <div class="figure__container--content">
+                            <figcaption>COO</figcaption>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit et labore at voluptatem
+                                perspiciatis
+                                repellat recusandae perferendis delectus.
+                            </p>
+                        </div>
+                    </div>
+                </figure>
+
+                <figure>
+                    <div class="figure__container">
+                        <a href="#" target="_blank"><img class="small__img" src="img/CFO.jpg" alt="The CFO"></a>
+                        <div class="figure__container--content">
+                            <figcaption>CFO</figcaption>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit et labore at voluptatem
+                                perspiciatis
+                                repellat recusandae perferendis delectus.
+                            </p>
+                        </div>
+                    </div>
+                </figure>
+
+                <figure>
+                    <div class="figure__container">
+                        <a href="#" target="_blank"><img class="small__img" src="img/CTO.jpg" alt="The CTO"></a>
+                        <div class="figure__container--content">
+                            <figcaption>CTO</figcaption>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit et labore at voluptatem
+                                perspiciatis
+                                repellat recusandae perferendis delectus.
+                            </p>
+                        </div>
+                    </div>
+                </figure>
+
+            </div>
+
+        </section>
+
+        <!-- --------------------------------------SECTION4_OUR_EVENTS -------------------------------------------------->
+
+        <section class="ourEvents">
+
+            <div class="section4__title--container">
+                <div class="imageClock">
+                    <img src="/img/popImageClock.png">
+                </div>
+
+                <h2 class="section4__title--flexorder"> Our Events </h2>
+
+                <div class="imageBeer">
+                    <img src="/img/PopimageBeer.png">
+                </div>
+            </div>
+
+            <div class="boxesEvent">
+
+                <div class="redboxSalsa">
+                    <h3>Salsa Course</h3>
+                    <div class="monthEvent">Nov</div>
+                    <div class="dayEvent">21ST</div>
+                    <div class="nameEvent">Latino night</div>
+                    <p class="aboutEvent">Lorem ipsum dolor sit <br> amet, consectetur <br> adipiscing elit, sed do <br>
+                        eiusmod tempor <br> incididunt
+                        ut labore et <br> dolore </p>
+                </div>
+
+
+                <div class="redboxChristmas">
+                    <h3>Christmas</h3>
+                    <div class="monthEvent">Dec</div>
+                    <div class="dayEvent">24TH</div>
+                    <div class="nameEvent">Christmas for refugees</div>
+                    <p class="aboutEvent">Lorem ipsum dolor sit <br> amet, consectetur <br> adipiscing elit, sed do <br>
+                        eiusmod tempor <br> incididunt
+                        ut labore et <br> dolore </p>
+                </div>
+
+
+                <div class="redboxFinance">
+                    <h3>Finance research</h3>
+                    <div class="monthEvent">Jan</div>
+                    <div class="dayEvent">5TH</div>
+                    <div class="nameEvent">Financers Drink</div>
+                    <p class="aboutEvent">Lorem ipsum dolor sit <br> amet, consectetur <br> adipiscing elit, sed do <br>
+                        eiusmod tempor <br> incididunt
+                        ut labore et <br> dolore </p>
+                </div>
+
+            </div>
+
+        </section>
+        <!-- SECTION_5-->
+        <!-- Form section start -->
+
+        <div class="section">
+            <div class="titre">
+                <h2>Need an Event ?</h2>
+            </div>
+
+            <form method="post" action="mecontacter.js">
+
+
+                <div class="nomPrenom">
+                    <p class="p">Name *</p>
+                    <span class="nomDroite">
+                        <p class="p">Lastname *</p>
+                    </span>
+                </div>
+                <div class="nomPrenomFormulaire">
+                    <input name="nom" placeholder="Name" type="text" required />
+
+                    <input name="nom" placeholder="Lastname" type="text" required />
+                </div>
+
+                <p class="p">E-mail *</p>
+                <input name="email" placeholder="Email" type="email" required /><br />
+
+                <div>
+                    <p class="p">Description *</p>
+                    <textarea name="message" placeholder="Description" required></textarea>
+
+                    <div>
+                        <input type="submit" value="Send" class="submit" />
+                    </div>
+                </div>
+            </form>
         </div>
 
-        <div class="teamMembers__container">
+        <!-- Form section end -->
 
-            <figure>
-                <div class="figure__container">
-                    <a href="#" target="_blank"><img class="small__img" src="img/CEO.jpg" alt="The CEO"></a>
-                    <div class="figure__container--content">
-                        <figcaption>CEO</figcaption>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit et labore at voluptatem
-                            perspiciatis
-                            repellat recusandae perferendis delectus.
-                        </p>
-                    </div>
-                </div>
-            </figure>
-
-            <figure>
-                <div class="figure__container">
-                    <a href="#" target="_blank"><img class="small__img" src="img/COO.jpg" alt="The COO"></a>
-                    <div class="figure__container--content">
-                        <figcaption>COO</figcaption>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit et labore at voluptatem
-                            perspiciatis
-                            repellat recusandae perferendis delectus.
-                        </p>
-                    </div>
-                </div>
-            </figure>
-
-            <figure>
-                <div class="figure__container">
-                    <a href="#" target="_blank"><img class="small__img" src="img/CFO.jpg" alt="The CFO"></a>
-                    <div class="figure__container--content">
-                        <figcaption>CFO</figcaption>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit et labore at voluptatem
-                            perspiciatis
-                            repellat recusandae perferendis delectus.
-                        </p>
-                    </div>
-                </div>
-            </figure>
-
-            <figure>
-                <div class="figure__container">
-                    <a href="#" target="_blank"><img class="small__img" src="img/CTO.jpg" alt="The CTO"></a>
-                    <div class="figure__container--content">
-                        <figcaption>CTO</figcaption>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit et labore at voluptatem
-                            perspiciatis
-                            repellat recusandae perferendis delectus.
-                        </p>
-                    </div>
-                </div>
-            </figure>
-
-        </div>
-
+        <!-- ---------------------SECTION_6_eventers-------------------------------------------------->
+        <footer class="section_6">
+            <h4>
+                MAIN EVENTERS
+            </h4>
+            <div class="logo">
+                <a href="#" title="LinkedIn"><img src="img/linkedIn_PNG38.png" alt="linkedIn"></a>
+                <a href="#" title="Instagramme"><img src="img/instagrammeL.png" alt="Instagramme"></a>
+                <a href="#" title="Twitter"><img src="img/logo-twitter.png" alt="Twitter"></a>
+                <a href="#" title="Facebook"><img src="img/facebook.jpg" alt="Facebook"></a>
+            </div>
+        </footer>
     </section>
-
-    <!-- --------------------------------------SECTION4_OUR_EVENTS -------------------------------------------------->
-
-    <section class="ourEvents">
-
-        <div class="section4__title--container">
-            <div class="imageClock">
-                <img src="/img/popImageClock.png">
-            </div>
-
-            <h2 class="section4__title--flexorder"> Our Events </h2>
-
-            <div class="imageBeer">
-                <img src="/img/PopimageBeer.png">
-            </div>
-        </div>
-
-        <div class="boxesEvent">
-
-            <div class="redboxSalsa">
-                <h3>Salsa Course</h3>
-                <div class="monthEvent">Nov</div>
-                <div class="dayEvent">21ST</div>
-                <div class="nameEvent">Latino night</div>
-                <p class="aboutEvent">Lorem ipsum dolor sit <br> amet, consectetur <br> adipiscing elit, sed do <br>
-                    eiusmod tempor <br> incididunt
-                    ut labore et <br> dolore </p>
-            </div>
-
-
-            <div class="redboxChristmas">
-                <h3>Christmas</h3>
-                <div class="monthEvent">Dec</div>
-                <div class="dayEvent">24TH</div>
-                <div class="nameEvent">Christmas for refugees</div>
-                <p class="aboutEvent">Lorem ipsum dolor sit <br> amet, consectetur <br> adipiscing elit, sed do <br>
-                    eiusmod tempor <br> incididunt
-                    ut labore et <br> dolore </p>
-            </div>
-
-
-            <div class="redboxFinance">
-                <h3>Finance research</h3>
-                <div class="monthEvent">Jan</div>
-                <div class="dayEvent">5TH</div>
-                <div class="nameEvent">Financers Drink</div>
-                <p class="aboutEvent">Lorem ipsum dolor sit <br> amet, consectetur <br> adipiscing elit, sed do <br>
-                    eiusmod tempor <br> incididunt
-                    ut labore et <br> dolore </p>
-            </div>
-
-        </div>
-
-    </section>
-  <!-- SECTION_5-->
-    <!-- Form section start -->
-
-    <div class="section">
-      <div class="titre">
-        <h2>Need an Event ?</h2>
-      </div>
-
-      <form method="post" action="mecontacter.js">
-
-        
-        <div class="nomPrenom">
-        <p class="p">Name *</p>
-        <span class="nomDroite"><p  class="p">Lastname *</p></span>
-        </div>
-        <div class="nomPrenomFormulaire">
-          <input name="nom" placeholder="Name" type="text" required />
-
-          <input name="nom" placeholder="Lastname" type="text" required />
-        </div>
-        
-        <p class="p">E-mail *</p>
-        <input name="email" placeholder="Email" type="email" required /><br />
-
-        <div>
-          <p class="p" >Description *</p>
-          <textarea
-            name="message"
-            placeholder="Description"
-            required
-          ></textarea>
-
-          <div>
-            <input type="submit" value="Send" class="submit" />
-          </div>
-        </div>
-      </form>
-    </div>
-
-    <!-- Form section end -->
- 
-    <!-- ---------------------SECTION_6_eventers-------------------------------------------------->
-    <footer class="section_6">
-        <h4>
-            MAIN EVENTERS
-        </h4>
-        <div class="logo">
-            <a href="#" title="LinkedIn"><img src="img/linkedIn_PNG38.png" alt="linkedIn"></a>
-            <a href="#" title="Instagramme"><img src="img/instagrammeL.png" alt="Instagramme"></a>
-            <a href="#" title="Twitter"><img src="img/logo-twitter.png" alt="Twitter"></a>
-            <a href="#" title="Facebook"><img src="img/facebook.jpg" alt="Facebook"></a>
-        </div>
-    </footer>
+    <script src="app.js"></scipt>
 </body>
 
 </html>
-
