first fix after merge

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <button class="burger">Open the menu</button>
         <nav class="header__nav--container">
             <ul class="header__nav__menu--liste">
-                <a href="our_changes.md"> 
+                <a href="our_changes.md">
                     <li>About</li>
                 </a>
                 <a href="#ourTeam">
@@ -192,11 +192,10 @@
                 </form>
             </div>
         </section>
-
         <!-- Form section end -->
 
         <!-- ---------------------SECTION_6_eventers-------------------------------------------------->
-        <footer  class="section_6">
+        <footer class="section_6">
             <h4>
                 MAIN EVENTERS
             </h4>
@@ -208,9 +207,8 @@
             </div>
         </footer>
     </section>
-    <script src="app.js">
-        < /scipt> <
-        /body>
+    <script src="app.js"></script>
+    
+</body>
 
-        <
-        /html>
+</html>
