--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <button class="burger">Open the menu</button>
         <nav class="header__nav--container">
             <ul class="header__nav__menu--liste">
-                <a href="our_changes.md">
+                <a href="#about">
                     <li>About</li>
                 </a>
                 <a href="#ourTeam">
@@ -39,7 +39,7 @@
 
     <!-- --------------------------------------SECTION_2_WHO_WE_ARE---------------------------------------------- -->
     <section class="main">
-        <section>
+        <section id="about">
             <div class="WhoWeAre">
                 <div class="imageBeer">
                     <img src="img/imageBiere28.png">
@@ -209,7 +209,7 @@
 
 
         <!-- Form section start -->
-        <section>
+        <section id="form">
             <div class="section">
                 <div class="titre">
                     <h2>Need an Event ?</h2>
